tests/conformance/positive/01-simple-interface-invocation.sml
<!-- Simple invocation with interface -->
<skill interface="code-review">
  Review this function for security issues.
</skill>
