tests/conformance/negative/05-no-resolution-target.sml
<!-- INVALID: invocation with no resolution target -->
<!-- Expected: ValidationError::MissingRequiredAttribute -->
<skill retries="2">
  No interface, impl, or name — cannot resolve.
</skill>
